--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "socket.io-client": "^4.2.0"
+    "socket.io-client": "^4.2.0",
+    "firebase": "8.10.0",
+    "next-auth": "^3.29.0",
+    "@next-auth/firebase-adapter": "^0.1.3",
+    "react-firebase-hooks": "^3.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
