--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next-auth/firebase-adapter": "^0.1.3",
+    "firebase": "8.10.0",
     "next": "latest",
+    "next-auth": "^3.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "socket.io-client": "^4.2.0",
-    "firebase": "8.10.0",
-    "next-auth": "^3.29.0",
-    "@next-auth/firebase-adapter": "^0.1.3",
-    "react-firebase-hooks": "^3.0.4"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
